--- a/cpp00/ex00/Makefile
+++ b/cpp00/ex00/Makefile
@@ -6,27 +6,31 @@
 #    By: tkeil <tkeil@student.42.fr>                +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/02/04 00:45:16 by tkeil             #+#    #+#              #
-#    Updated: 2025/02/13 17:31:07 by tkeil            ###   ########.fr        #
+#    Updated: 2025/02/24 20:16:24 by tkeil            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 CXX = c++  
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 NAME = megaphone
+OBJSDIR = objs/
 
 SRCS = megaphone.cpp
-OBJS = $(SRCS:.cpp=.o)
+OBJS = $(SRCS:%.cpp=$(OBJSDIR)%.o)
 
 all: $(NAME)
 
 $(NAME): $(OBJS)
 	$(CXX) $(CXXFLAGS) $(OBJS) $(INCLUDES) -o $(NAME)
 
-%.o: %.cpp
-	$(CXX) $(CXXFLAGS) $(INCLUDES) -c $< -o $@
+$(OBJSDIR):
+	mkdir -p $(OBJSDIR)
+
+$(OBJSDIR)%.o: %.cpp $(OBJSDIR)
+	$(CXX) $(CXXFLAGS) -c $< -o $@
 
 clean:
-	rm -rf $(OBJS)
+	rm -rf $(OBJSDIR)
 
 fclean: clean
 	rm -rf $(NAME)
