created the setName function rather than setting the name in the constructor to avoid unwanted messages. Called setName and announce seperatetly in the initializeZombies function.

--- a/cpp01/ex01/Makefile
+++ b/cpp01/ex01/Makefile
@@ -6,34 +6,33 @@
 #    By: tkeil <tkeil@student.42.fr>                +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/02/18 12:33:16 by tkeil             #+#    #+#              #
-#    Updated: 2025/02/18 12:33:39 by tkeil            ###   ########.fr        #
+#    Updated: 2025/03/10 14:48:25 by tkeil            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 CXX = c++  
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98
-NAME =  BraiiiiiiinnnzzzZ
+NAME =  ex01
+OBJSDIR = objs/
 
 SRCS = main.cpp Zombie.cpp zombieHorde.cpp
-OBJS = $(SRCS:.cpp=.o)
+OBJS = $(SRCS:%.cpp=$(OBJSDIR)%.o)
 
 all: $(NAME)
 
 $(NAME): $(OBJS)
-	$(CXX) $(CXXFLAGS) $(OBJS) $(INCLUDES) -o $(NAME)
+	$(CXX) $(CXXFLAGS) $(OBJS) -o $(NAME)
 
-%.o: %.cpp
-	$(CXX) $(CXXFLAGS) $(INCLUDES) -c $< -o $@
+$(OBJSDIR)%.o: %.cpp
+	@mkdir -p $(OBJSDIR)
+	$(CXX) $(CXXFLAGS) -c $< -o $@
 
 clean:
-	rm -rf $(OBJS)
+	rm -rf $(OBJSDIR)
 
 fclean: clean
 	rm -rf $(NAME)
 
 re: fclean all
-
-test:
-	echo $(OBJS)
 
 .PHONY: all clean fclean re
