Makefile creates now an object folder for a cleaner file structure.

--- a/cpp01/ex00/Makefile
+++ b/cpp01/ex00/Makefile
@@ -6,27 +6,29 @@
 #    By: tkeil <tkeil@student.42.fr>                +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/02/07 12:45:30 by tkeil             #+#    #+#              #
-#    Updated: 2025/03/10 13:34:29 by tkeil            ###   ########.fr        #
+#    Updated: 2025/03/10 14:47:16 by tkeil            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 CXX = c++  
 CXXFLAGS = -Wall -Wextra -Werror -std=c++98
 NAME =  ex00
+OBJSDIR = objs/
 
 SRCS = main.cpp Zombie.cpp randomChump.cpp newZombie.cpp
-OBJS = $(SRCS:.cpp=.o)
+OBJS = $(SRCS:%.cpp=$(OBJSDIR)%.o)
 
 all: $(NAME)
 
 $(NAME): $(OBJS)
-	$(CXX) $(CXXFLAGS) $(OBJS) $(INCLUDES) -o $(NAME)
+	$(CXX) $(CXXFLAGS) $(OBJS) -o $(NAME)
 
-%.o: %.cpp
-	$(CXX) $(CXXFLAGS) $(INCLUDES) -c $< -o $@
+$(OBJSDIR)%.o: %.cpp
+	@mkdir -p $(OBJSDIR)
+	$(CXX) $(CXXFLAGS) -c $< -o $@
 
 clean:
-	rm -rf $(OBJS)
+	rm -rf $(OBJSDIR)
 
 fclean: clean
 	rm -rf $(NAME)
