Makefile and implemented the prototypes of methods in the cpp files.

--- a/cpp04/ex03/Makefile
+++ b/cpp04/ex03/Makefile
@@ -6,26 +6,27 @@
 #    By: tkeil <tkeil@student.42.fr>                +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/04/14 15:19:53 by tkeil             #+#    #+#              #
-#    Updated: 2025/04/14 15:20:24 by tkeil            ###   ########.fr        #
+#    Updated: 2025/04/14 15:46:59 by tkeil            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 CXX = c++  
 CXXFLAGS = -Wall -Wextra -Werror -std=c++17
-NAME =  ex02
+HEADERS = Includes/
+NAME =  ex03
 OBJSDIR = objs/
 
-SRCS = main.cpp Animal.cpp Dog.cpp Cat.cpp WrongAnimal.cpp WrongCat.cpp Brain.cpp
+SRCS = main.cpp AMateria.cpp Cure.cpp Ice.cpp ICharacter.cpp IMateriaSource.cpp
 OBJS = $(SRCS:%.cpp=$(OBJSDIR)%.o)
 
 all: $(NAME)
 
 $(NAME): $(OBJS)
-	$(CXX) $(CXXFLAGS) $(OBJS) -o $(NAME)
+	$(CXX) $(CXXFLAGS) $(OBJS) -I$(HEADERS) -o $(NAME)
 
 $(OBJSDIR)%.o: %.cpp
 	@mkdir -p $(OBJSDIR)
-	$(CXX) $(CXXFLAGS) -c $< -o $@
+	$(CXX) $(CXXFLAGS) -I$(HEADERS) -c $< -o $@
 
 clean:
 	rm -rf $(OBJSDIR)
