Refactored project to use interfaces and deep copies. Interfaces no longer have corresponding .cpp files. Character, Cure, Ice, and MateriaSource now inherit from their respective abstract interfaces. Implemented deep copy constructors and assignment operators for Character. AMateria does not have an assignment operator anymore, because it doesn’t make sense to assign it to another materia. Made AMateria’s type string constant (const) to prevent reassignment. When cloning an AMateria, the current object (*this) will be sent to the constructor of Ice/Cure to do a deep copy. Created equip, unequal and use methods for Character. Created a Trash of unequipped material in the main, that will be freed at the end of the main. MateriaSource class can only learn 4 materias.

--- a/cpp04/ex03/Makefile
+++ b/cpp04/ex03/Makefile
@@ -6,7 +6,7 @@
 #    By: tkeil <tkeil@student.42.fr>                +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/04/14 15:19:53 by tkeil             #+#    #+#              #
-#    Updated: 2025/04/14 15:46:59 by tkeil            ###   ########.fr        #
+#    Updated: 2025/04/15 17:57:28 by tkeil            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -16,7 +16,7 @@ HEADERS = Includes/
 NAME =  ex03
 OBJSDIR = objs/
 
-SRCS = main.cpp AMateria.cpp Cure.cpp Ice.cpp ICharacter.cpp IMateriaSource.cpp
+SRCS = main.cpp AMateria.cpp Cure.cpp Ice.cpp Character.cpp MateriaSource.cpp
 OBJS = $(SRCS:%.cpp=$(OBJSDIR)%.o)
 
 all: $(NAME)
