--- a/cpp07/ex01/Makefile
+++ b/cpp07/ex01/Makefile
@@ -6,7 +6,7 @@
 #    By: tkeil <tkeil@student.42.fr>                +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/03/13 12:25:53 by tkeil             #+#    #+#              #
-#    Updated: 2025/04/28 19:26:59 by tkeil            ###   ########.fr        #
+#    Updated: 2025/04/29 14:25:12 by tkeil            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,7 +15,7 @@ CXXFLAGS = -Wall -Wextra -Werror -std=c++17
 NAME =  ex01
 OBJSDIR = objs/
 
-SRCS = main.cpp Serializer.cpp
+SRCS = main.cpp
 OBJS = $(SRCS:%.cpp=$(OBJSDIR)%.o)
 
 all: $(NAME)
