ex00: -Created the printValues function. Same as the read_data function, it checks for valid date format and valid balance format. -Improved the isValidDate function. Also checked now, that the date string is exactly 10 characters long. So that no years with less than 4 characters are allowed. -Handled the case, when the given date is less than the earliest possible date inside the data.csv file. -Used a function from the scalarConverter exercise for converting the rate/balance into a number and for validating the number for safer number handling than with stringstream overload.

--- a/cpp09/ex00/Makefile
+++ b/cpp09/ex00/Makefile
@@ -6,7 +6,7 @@
 #    By: tkeil <tkeil@student.42.fr>                +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/03/13 12:25:53 by tkeil             #+#    #+#              #
-#    Updated: 2025/05/03 17:33:20 by tkeil            ###   ########.fr        #
+#    Updated: 2025/05/04 14:04:31 by tkeil            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,7 +15,7 @@ CXXFLAGS = -Wall -Wextra -Werror -std=c++17
 NAME =  btc
 OBJSDIR = objs/
 
-SRCS = main.cpp
+SRCS = main.cpp BitcoinExchange.cpp
 OBJS = $(SRCS:%.cpp=$(OBJSDIR)%.o)
 
 all: $(NAME)
