ex02: implemented working Ford johnson algorithm. distinguish between one string as an input of numbers and one number for one argument. If there is an odd number of numbers, the last number will be stored as leftover. The numbers will be stored as pairs inside a vector of pairs. Then the pairs will be swapped in such a way, that the larger number will be at the second slot. Then the pairs will be sorted according to the larger number. Then the larger numbers will be pushed to the main and the smaller to the pend container. Then the first number inside pend will be pushed to main. Improved the storing of the jacobs sequence numbers into the jacobs vector. Also used a used vector, that saves the state of an pend chain index (was it already pushed to the main or not). Then the numbers from the pend chain will be inserted according to the jacobs indexes to the main chain using lower_bound function for finding the iterator.

--- a/cpp09/ex02/Makefile
+++ b/cpp09/ex02/Makefile
@@ -6,7 +6,7 @@
 #    By: tkeil <tkeil@student.42.fr>                +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2025/03/13 12:25:53 by tkeil             #+#    #+#              #
-#    Updated: 2025/05/06 14:50:50 by tkeil            ###   ########.fr        #
+#    Updated: 2025/05/06 16:41:26 by tkeil            ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -15,7 +15,7 @@ CXXFLAGS = -Wall -Wextra -Werror -std=c++17
 NAME =  PmergeMe
 OBJSDIR = objs/
 
-SRCS = main.cpp
+SRCS = main.cpp PmergeMe.cpp
 OBJS = $(SRCS:%.cpp=$(OBJSDIR)%.o)
 
 all: $(NAME)
